# dr-daily-report

./: .deployment-trigger  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  =3.0.0  ANALYSIS_validate_aurora_schema_failure.md  DATABASE_MIGRATION_SUMMARY.md  Dockerfile  Dockerfile.fund-data-sync  Dockerfile.lambda.container  EVALUATION_SETUP.md  FIXES_IMPLEMENTED.md  IMPLEMENTATION_STATUS.md  LAMBDA_DEPLOYMENT_INSTRUCTIONS.md  LINE_INTEGRATION_TEST.md  PERMISSIONS_REQUIRED.md  README.md  S3_CACHE_IMPLEMENTATION_REPORT.md  STANDALONE_CHART_VIEWER.md  TERRAFORM_MIGRATION_SUMMARY.md  TESTING_GUIDE.md  TEST_RESULTS.md  TILES_NO_DATA_ANALYSIS.md  TODO-multi-env-deploy.md  bokeh_tiles_test.html  check_tiles_puppeteer.js  config.py  create_lambda.sh  data_fetcher.py  database.py  debug_tiles.js  deploy.sh  docker-compose.lambda.yml  find_thai_voices.py  generate_all_reports.py  generate_report_with_faithfulness.py  get_pdf_url.py  hotspot_analysis.py  (+43 more)
.claude/: CLAUDE.md  understanding-2025-12-30-aurora-tables-inventory.md  understanding-2025-12-30-scheduler-storage-tables.md  understanding-2025-12-30-ticker-info-usage-by-apps.md
.context/: default.el  state.el
.cursor/: mcp.json  mcp.json.template
data/: funda_data.csv  tickers.csv
deployment_package_lambda/: agent.py  create_deployment.py  demo_reports.py  run_server.py  test_bot.py  test_line_integration.py  test_line_local.py  test_ticker.py
deployment_package_minimal/: lambda_handler.py
docs/: API_USAGE.md  ARCHITECTURE_INVENTORY.md  AUDIO_GENERATION.md  AWS_OPERATIONS.md  AWS_SETUP.md  (+37 more)
(+1205 files in other folders)
